--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
           command: fastlane scan
           environment:
             SCAN_DEVICE: iPhone 7
+            SCAN_SCHEME: iOS_MyTaxi_ChallengeTests
 
       # Collect XML test results data to show in the UI,
       # and save the same XML files under test-results folder
