--- a/iOS_MyTaxi_Challenge.xcodeproj/xcshareddata/xcschemes/iOS_MyTaxi_ChallengeTests.xcscheme
+++ b/iOS_MyTaxi_Challenge.xcodeproj/xcshareddata/xcschemes/iOS_MyTaxi_ChallengeTests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A79B19EE2306E68D002A02B0"
+               BuildableName = "iOS_MyTaxi_ChallengeTests.xctest"
+               BlueprintName = "iOS_MyTaxi_ChallengeTests"
+               ReferencedContainer = "container:iOS_MyTaxi_Challenge.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -36,6 +52,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A79B19EE2306E68D002A02B0"
+            BuildableName = "iOS_MyTaxi_ChallengeTests.xctest"
+            BlueprintName = "iOS_MyTaxi_ChallengeTests"
+            ReferencedContainer = "container:iOS_MyTaxi_Challenge.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -45,6 +70,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A79B19EE2306E68D002A02B0"
+            BuildableName = "iOS_MyTaxi_ChallengeTests.xctest"
+            BlueprintName = "iOS_MyTaxi_ChallengeTests"
+            ReferencedContainer = "container:iOS_MyTaxi_Challenge.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
