--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,72 @@
-# iOS CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/ios-migrating-from-1-2/ for more details
-#
 version: 2
 jobs:
-  build:
-
-    # Specify the Xcode version to use
+  build-and-test:
     macos:
       xcode: "10.3.0"
-
+    working_directory: /Users/distiller/project
+    environment:
+      FL_OUTPUT_DIR: output
+      FASTLANE_LANE: iOS_MyTaxi_ChallengeTests
+    shell: /bin/bash --login -o pipefail
     steps:
       - checkout
-
-      # Install CocoaPods
+      - run: bundle install
       - run:
-          name: Install CocoaPods
-          command: pod install
-
-      # Build the app and run tests
-      - run:
-          name: Build and run tests
-          command: fastlane scan
-          environment:
-            SCAN_DEVICE: iPhone 7
-            SCAN_SCHEME: iOS_MyTaxi_ChallengeTests
-
-      # Collect XML test results data to show in the UI,
-      # and save the same XML files under test-results folder
-      # in the Artifacts tab
+          name: Fastlane
+          command: bundle exec fastlane $FASTLANE_LANE
+      - store_artifacts:
+          path: output
       - store_test_results:
-          path: test_output/report.xml
+          path: output/scan
+
+  adhoc:
+    macos:
+      xcode: "10.3.0"
+    working_directory: /Users/distiller/project
+    environment:
+      FL_OUTPUT_DIR: output
+      FASTLANE_LANE: adhoc
+    shell: /bin/bash --login -o pipefail
+    steps:
+      - checkout
+      - run: bundle install
+      - run:
+          name: Fastlane
+          command: bundle exec fastlane $FASTLANE_LANE
       - store_artifacts:
-          path: /tmp/test-results
-          destination: scan-test-results
+          path: output/iOS_MyTaxi_Challenge.ipa
+
+  beta:
+    macos:
+      xcode: "10.3.0"
+    working_directory: /Users/distiller/project
+    environment:
+      FL_OUTPUT_DIR: output
+      FASTLANE_LANE: beta
+    shell: /bin/bash --login -o pipefail
+    steps:
+      - checkout
+      - run: bundle install
+      - run:
+          name: Fastlane
+          command: bundle exec fastlane $FASTLANE_LANE
       - store_artifacts:
-          path: ~/Library/Logs/scan
-          destination: scan-logs
+          path: output/iOS_MyTaxi_Challenge.ipa
+
+workflows:
+  version: 2
+  build-test-adhoc:
+    jobs:
+      - build-and-test
+      - adhoc:
+          filters:
+            branches:
+              only: development
+          requires:
+            - build-and-test
+      #- beta:
+          #filters:
+            #branches:
+              #only: master
+          #requires:
+            #- build-and-test
