--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,18 @@ jobs:
           path: output
       - store_test_results:
           path: output/scan
+      # Install CocoaPods
+      - run:
+          name: Install CocoaPods
+          command: pod install
+
+      # Build the app and run tests
+      - run:
+          name: Build and run tests
+          command: fastlane scan
+          environment:
+            SCAN_DEVICE: iPhone 7
+            SCAN_SCHEME: iOS_MyTaxi_ChallengeTests
 
   adhoc:
     macos:
